@@ -8,6 +8,7 @@ Version 6.7 - not yet released
   - obsolete configuration pages "polar", "logger info" removed
   - new page: "horizon" (#1592)
   - default page gesture changed right/left sense according to other xc ui interaction pattern
+  - pressing the Escape key in task manager switches to "Close" tab (#2877)
 * map
   - terrain countour lines (#2451)
   - continue loading terrain/topography without GPS fix (#2723)
